use slf4j
Signed-off-by: Olivier Lamy <olamy@apache.org>